welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: '(' expected but identifier found.
  if A >= 3:
     ^Poucet:16: error: illegal start of simple expression
}while (estSurBlanc()) 
^