welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var A: Int=0 

do{
  for (pas <-0 to 4){
    avance()
    if (estSurBiscuit==true){
      A=A+1
    }
  }
  if A >= 3:
  	gauche()
  else:
  	droite()
  
  
}while (estSurBlanc())